[gd_scene load_steps=9 format=3 uid="uid://dc6oe7dfg2ice"]

[ext_resource type="Script" uid="uid://c67v5u2go0uhq" path="res://Scenes/main_menu.gd" id="1_ce3w2"]
[ext_resource type="Texture2D" uid="uid://dxjytwlr6d84f" path="res://Placeholder Art/menu_background.png" id="2_n45e2"]
[ext_resource type="Texture2D" uid="uid://b6oxgd10fqwpj" path="res://Placeholder Art/box.png" id="3_opfnp"]
[ext_resource type="Texture2D" uid="uid://d4feofqxnrx5x" path="res://Placeholder Art/logo.png" id="4_cp0ys"]

[sub_resource type="Animation" id="Animation_t1dhk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(124, -275)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PlayerIllustration:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PlayerIllustration:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(540, 807)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Buttons/StartButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Buttons/OptionsButton:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Buttons/CreditsButton:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Buttons:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 404)]
}

[sub_resource type="Animation" id="Animation_ce3w2"]
resource_name = "buttons"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Buttons/StartButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 2),
"transitions": PackedFloat32Array(8.28211, 8.28211, 8.28211),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Buttons/OptionsButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.63333, 2),
"transitions": PackedFloat32Array(8.28211, 8.28211, 8.28211),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Buttons/CreditsButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(8.28211, 8.28211),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Buttons:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.66667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 404), Vector2(0, 5), Vector2(0, 5)]
}

[sub_resource type="Animation" id="Animation_vr1f0"]
resource_name = "logo"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.164939, 0.164939),
"update": 0,
"values": [Vector2(124, -275), Vector2(124, 107)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.61, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PlayerIllustration:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.633333, 1.5),
"transitions": PackedFloat32Array(0.241484, 0.241484, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PlayerIllustration:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.1, 1.5),
"transitions": PackedFloat32Array(0.241484, 0.466517, 1),
"update": 0,
"values": [Vector2(540, 807), Vector2(540, 90), Vector2(540, 90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5egv6"]
_data = {
&"RESET": SubResource("Animation_t1dhk"),
&"buttons": SubResource("Animation_ce3w2"),
&"logo": SubResource("Animation_vr1f0")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce3w2")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n45e2")
expand_mode = 1

[node name="MenuPage" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerIllustration" type="TextureRect" parent="MenuPage"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -612.0
offset_top = 407.0
offset_bottom = 1037.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_opfnp")

[node name="Logo" type="TextureRect" parent="MenuPage"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 124.0
offset_top = -275.0
offset_right = 470.0
offset_bottom = 71.0
texture = ExtResource("4_cp0ys")
expand_mode = 1

[node name="Buttons" type="Control" parent="MenuPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 404.0
offset_bottom = 404.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MenuPage/Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = -407.0
offset_right = 504.0
offset_bottom = -298.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="OptionsButton" type="Button" parent="MenuPage/Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = -275.0
offset_right = 504.0
offset_bottom = -166.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="CreditsButton" type="Button" parent="MenuPage/Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = -132.0
offset_right = 504.0
offset_bottom = -23.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Credits"

[node name="QuitButton" type="Button" parent="MenuPage/Buttons"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1009.0
offset_top = -138.0
offset_right = 1129.0
offset_bottom = -32.0
grow_vertical = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuPage"]
root_node = NodePath("../Logo")
libraries = {
&"": SubResource("AnimationLibrary_5egv6")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="MenuPage"]
root_node = NodePath("../Logo")
libraries = {
&"": SubResource("AnimationLibrary_5egv6")
}

[node name="MenuAnimationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="OptionsPage" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="OptionsPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -142.0
offset_right = 295.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OptionsPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -101.0
offset_right = 210.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Super swaggy options
will go here"

[node name="ReturnButton" type="Button" parent="OptionsPage"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 126.0
offset_top = -398.0
offset_right = 268.0
offset_bottom = -333.0
grow_horizontal = 2
grow_vertical = 0
text = "return to menu"

[node name="CreditsPage" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CreditsPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -142.0
offset_right = 295.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CreditsPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -101.0
offset_right = 210.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Super swaggy Credits
will go here"

[node name="ReturnButton" type="Button" parent="CreditsPage"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 126.0
offset_top = -398.0
offset_right = 268.0
offset_bottom = -333.0
grow_horizontal = 2
grow_vertical = 0
text = "return to menu"

[connection signal="pressed" from="MenuPage/Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuPage/Buttons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuPage/Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="timeout" from="MenuAnimationTimer" to="." method="play_animations"]
[connection signal="pressed" from="OptionsPage/ReturnButton" to="." method="return_to_menu"]
[connection signal="pressed" from="CreditsPage/ReturnButton" to="." method="return_to_menu"]
